[project]
name = "intro-analytics-chatbot"
version = "0.1.0"
description = "Domain-restricted Q&A chatbot using TinyLlama + FastAPI"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "transformers>=4.36.0,<5",
    "torch>=2.1.0,<3",
    "pydantic>=2.0.0",
]

[tool.setuptools]
py-modules = ["app", "eval"]

[tool.uv]
package = true
